﻿Subtitle Edit Changelog

3.3.12 (xth December 2013)
* NEW:
   * Added "File -> Import images"
   * Added "Tools -> Merge lines with same text"
* IMPROVED:
   * Updated Portuguese language file - thx moob
   * Updated Vietnamese language file - thx everytime
   * Updated Basque language file - thx Xabier
   * Updated Korean language file - thx domddol
   * Updated Brazilian Portuguese language file - thx Igor Rückert
   * Now remembers RTL mode - thx FTABoy
* FIXED:
  * Fixed bug in "Fix common errors: Remove hyphen" - thx honeybunny
  * Fixed bug in "Remove text for HI" issue - thx cipry15
  * Fixed bug in "Auto br" - thx XhmikosR


3.3.11 (6th December 2013)
* NEW:
   * Added "line height" to image export
   * Added Vietnamese language file - thx everytime
   * Added custom shortcut for vertical zoom out of waveform
* IMPROVED:
   * Updated Italian language file - thx SilverDrake
   * Updated German language file - thx Christoph
   * Updated Bulgarian language file - thx Iavor
   * Updated Brazilian Portuguese language file - thx Igor Rückert
   * Added .m4a file type to audio file types
   * Added Chinese Traditional to Tesseract OCR dictionary list
   * Added Polish spelling dictionary to download list
   * "Adjust display durations" now allows down to 75% - thx Dennis
   * "Restore auto-backup" window now displays number of bytes
   * Now remembers last "Change casing" choice - thx anil
* FIXED:
   * Fixed audio waveform so it works better with VLC
   * Fixed spectrogram sync
   * Fixed spectrogram so it works with FFmpeg
   * Dragging line in wave form in frames mode keeps duration - thx Adrian
   * Fixed Slovak spell check dictionary link
   * Status text after re-calculating display times fixed - thx Dennis
   * Do not leave empty files in temp folder after extracting audio
   * Export to image based formats: text in font tags now also gets shadow
   * Some fixes for ".lrc" format - thx sialivi


3.3.10 (22nd November 2013)
* NEW: