@@ -465,6 +465,7 @@ namespace Nikse.SubtitleEdit.Logic
         public bool DisableVideoAutoLoading { get; set; }
         public int NewEmptyDefaultMs { get; set; }
         public bool RightToLeftMode { get; set; }
+        public string LastSaveAsFormat { get; set; }
         public bool ShowBetaStuff { get; set; }
 
         public GeneralSettings()
@@ -544,6 +545,7 @@ namespace Nikse.SubtitleEdit.Logic
             MoveVideo100Or500MsPlaySmallSample = false;
             DisableVideoAutoLoading = false;
             RightToLeftMode = false;
+            LastSaveAsFormat = string.Empty;
             ShowBetaStuff = false;
             NewEmptyDefaultMs = 2000;
         }
@@ -1353,6 +1355,9 @@ namespace Nikse.SubtitleEdit.Logic
             subNode = node.SelectSingleNode("RightToLeftMode");
             if (subNode != null)
                 settings.General.RightToLeftMode = Convert.ToBoolean(subNode.InnerText.Trim());
+            subNode = node.SelectSingleNode("LastSaveAsFormat");
+            if (subNode != null)
+                settings.General.LastSaveAsFormat = subNode.InnerText.Trim();            
             subNode = node.SelectSingleNode("ShowBetaStuff");
             if (subNode != null)
                 settings.General.ShowBetaStuff = Convert.ToBoolean(subNode.InnerText.Trim());
@@ -2456,6 +2461,7 @@ namespace Nikse.SubtitleEdit.Logic
             textWriter.WriteElementString("MoveVideo100Or500MsPlaySmallSample", settings.General.MoveVideo100Or500MsPlaySmallSample.ToString());
             textWriter.WriteElementString("DisableVideoAutoLoading", settings.General.DisableVideoAutoLoading.ToString());
             textWriter.WriteElementString("RightToLeftMode", settings.General.RightToLeftMode.ToString());
+            textWriter.WriteElementString("LastSaveAsFormat", settings.General.LastSaveAsFormat);            
             textWriter.WriteElementString("ShowBetaStuff", settings.General.ShowBetaStuff.ToString());
             textWriter.WriteElementString("NewEmptyDefaultMs", settings.General.NewEmptyDefaultMs.ToString(CultureInfo.InvariantCulture));
 
